WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141043
Frequent kernel panics when running WebKit regression tests
https://bugs.webkit.org/show_bug.cgi?id=141043
Summary
Frequent kernel panics when running WebKit regression tests
Alexey Proskuryakov
Reported
2015-01-29 12:39:52 PST
Due to <
rdar://problem/11806093
>, re-exec of PluginService can sometimes (rarely) cause a kernel panic when switching from 64 bit to 32 bit. But this is not so rare on the bots.
Attachments
proposed fix
(31.61 KB, patch)
2015-01-29 12:48 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
with more project fixes
(36.36 KB, patch)
2015-01-29 12:57 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-01-29 12:48:54 PST
Created
attachment 245639
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2015-01-29 12:57:04 PST
Created
attachment 245641
[details]
with more project fixes
Sam Weinig
Comment 3
2015-01-29 13:19:23 PST
Comment on
attachment 245641
[details]
with more project fixes I don't see you removing passing the architecture to service. That can (and should) probably be ripped out.
Alexey Proskuryakov
Comment 4
2015-01-29 13:29:48 PST
Comment on
attachment 245641
[details]
with more project fixes Good point. Let's do that once we have a confirmation that this patch helped.
WebKit Commit Bot
Comment 5
2015-01-29 14:14:30 PST
Comment on
attachment 245641
[details]
with more project fixes Clearing flags on attachment: 245641 Committed
r179367
: <
http://trac.webkit.org/changeset/179367
>
WebKit Commit Bot
Comment 6
2015-01-29 14:14:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug