Frequent kernel panics when running WebKit regression tests https://bugs.webkit.org/show_bug.cgi?id=141043

Reviewed by Sam Weinig.

Split PluginService.Development into 32-bit and 64-bit variants, to better match
production variant. When building FAT, we'll have the right architecture from
the start now, so no need to re-exec into a different architecture.

* Configurations/PluginService.Development.xcconfig: Removed.
* Configurations/PluginService.32.Development.xcconfig: Copied from Source/WebKit2/Configurations/PluginService.Development.xcconfig.
* Configurations/PluginService.64.Development.xcconfig: Copied from Source/WebKit2/Configurations/PluginService.Development.xcconfig.
Changed to use ONLY_ACTIVE_ARCH instead of CONFIGURATION, so that we build the
right thing even in debug FAT builds.

* Configurations/PluginService.32.xcconfig:
* Configurations/PluginService.64.xcconfig:
While at it, applied the same changes as in Development variants. This means that
FAT builds will now build only the correct architecture for PluginService.64
(it used to build FAT, unnecessarily).

* PluginProcess/EntryPoint/mac/XPCService/PluginService.Development/Info.plist:
Updated to support multiple product names.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm: (WebKit::serviceName): Launch the
right development service.

* WebKit2.xcodeproj/project.pbxproj: Split the Plugin.Development target into two.


Canonical link: https://commits.webkit.org/159048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179367 268f45cc-cd09-0410-ab3c-d52691b4dbfc